--- a/css-cadastro2/cadastro2.css
+++ b/css-cadastro2/cadastro2.css
@@ -19,7 +19,7 @@ body {
 }
 
 .main__container {
-    height: 55vh;
+    height: 65vh;
     width: 40vw;
     display: flex;
     flex-direction: column;
@@ -41,6 +41,7 @@ body {
 .highlight {
     color: #432b54;
     font-weight: bolder;
+    font-size:150%;
 }
 
 .buttons {
