--- a/css/landing.css
+++ b/css/landing.css
@@ -61,6 +61,7 @@ h3{
 }
 
 .nav_buttons_cadastro{
+    margin-left: 2vw;
     display: flex;
     justify-content: center;
     align-items: center;
